--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500.600,700,800,900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -12,76 +12,83 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #434750;
+    background: #1a242a;
 }
 
-ul {
+.container {
     position: relative;
-    transform: skewY(-15deg);
-}
-
-ul li {
-    position: relative;
-    list-style: none;
-    width: 200px;
-    background: #3e3f46;
-    padding: 15px;
-    z-index: var(--i);
+    width: 0px;
+    height: 0px;
+    background: #37444b;
+    border-radius: 25px;
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-ul li:hover {
-    background: #33a3ee;
-    transform: translateX(-50px);
+.container.active {
+    width: 400px;
+    height: 400px;
+    transition-delay: 0.5s;
 }
 
-ul li::before {
+.container::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: -40px;
+    bottom: -15px;
     width: 40px;
-    height: 100%;
-    background: #2e3133;
-    transform-origin: right;
-    transform: skewY(45deg);
-    transition: 0.5s;
-}
-
-ul li:hover::before {
-    background: #1f5378;
-}
-
-ul li::after {
-    content: '';
-    position: absolute;
-    top: -40px;
-    left: 0;
     height: 40px;
-    width: 100%;
-    background: #35383e;
-    transform-origin: bottom;
-    transform: skewX(45deg);
+    background: #37444b;
+    border-radius: 5px;
+    opacity: 0;
+    transition: 0.5s;
+    transform: rotate(45deg);
+}
+
+.container.active::before {
+    opacity: 1;
+    transition-delay: 0.5s;
+}
+
+.container .content {
+    min-width: 400px;
+    padding: 40px;
+    color: #fff;
+    opacity: 0;
+    transition: 0.5s;
+    transform: scale(0);
+}
+
+.container.active .content {
+    opacity: 1;
+    transition-delay: 0.5s;
+    transform: scale(1);
+}
+
+.toggleBtn {
+    position: absolute;
+    bottom: -20px;
+    min-width: 60px;
+    height: 60px;
+    background: #0bcf9c;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: 0.5s;
 }
 
-ul li:hover::after {
-    background: #2982b9;
-}
-
-ul li a {
-    text-decoration: none;
-    color: #999;
-    display: block;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
-}
-
-ul li:hover a {
+.toggleBtn::before {
+    content: '+';
+    font-size: 2.5em;
     color: #fff;
 }
 
-ul li:last-child::after {
-    box-shadow: -120px 120px 20px rgba(0, 0, 0, 0.25);
+.container.active .toggleBtn {
+    bottom: -90px;
+    transform: rotate(135deg);
+    background: #ff5a57;
 }
+
