--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -10,64 +9,69 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #181c1f;
+    background: #050505;
 }
 
-.container {
+.cube {
     position: relative;
-    height: 400px;
-    border-bottom: 2 solid #fff;
-}
-
-.cloud {
-    position: relative;
-    top: 50px;
-    width: 320px;
-    height: 100px;
-    background: #fff;
-    border-radius: 100px;
-}
-
-.cloud::before {
-    content: '';
-    position: absolute;
-    top: -50px;
-    left: 40px;
-    width: 110px;
-    height: 110px;
-    background: #fff;
-    border-radius: 50%;
-    box-shadow: 90px 0 0 30px #fff;
-}
-
-.rain {
-    position: relative;
-    display: flex;
-    z-index: 1;
-    padding: 0 20px;
-}
-
-.rain span {
-    position: relative;
-    bottom: 10px;
-    width: 10px;
-    height: 10px;
-    background: #fff;
-    margin: 0 2px;
-    border-radius: 50%;
-    animation: animate 5s linear infinite;
-    animation-duration: calc(15s / var(--i));
-    transform-origin: bottom;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+    transform: rotateX(-30deg);
+    animation: animate 4s linear infinite;
 }
 
 @keyframes animate {
     0% {
-        transform: translateY(0) scale(1);
-    }
-    70% {
-        transform: translateY(298px) scale(1);
+        transform: rotateX(-30deg) rotateY(0deg);
     }
     100% {
-        transform: translateY(298px) scale(0);
+        transform: rotateX(-30deg) rotateY(360deg);
     }
+}
+
+.cube div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
+.cube div span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#151515, #00ec00);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(150px); /* 300 / 2 = 150 */
+}
+
+.top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #222;
+    transform: rotateX(90deg) translateZ(150px);
+}
+
+.top::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #0f0;
+    transform: translateZ(-380px);
+    filter: blur(20px);
+    box-shadow: 0 0 120px rgba(0, 255, 0, 0.2), 
+    0 0 200px rgba(0, 255, 0, 0.4),
+    0 0 300px rgba(0, 255, 0, 0.6),
+    0 0 400px rgba(0, 255, 0, 0.8),
+    0 0 500px rgba(0, 255, 0, 1);
 }
