--- a/style.css
+++ b/style.css
@@ -1,77 +1,93 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #050505;
+    background: #031321;
+    font-family: consolas;
 }
 
-.cube {
+a {
     position: relative;
-    width: 300px;
-    height: 300px;
-    transform-style: preserve-3d;
-    transform: rotateX(-30deg);
-    animation: animate 4s linear infinite;
+    display: inline-block;
+    padding: 15px 30px;
+    color: #2196f3;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
 }
 
-@keyframes animate {
-    0% {
-        transform: rotateX(-30deg) rotateY(0deg);
-    }
-    100% {
-        transform: rotateX(-30deg) rotateY(360deg);
-    }
+a:hover {
+    color: #255784;
+    background: #2196f3;
+    box-shadow: 0 0 10px #2196f3,
+    0 0 40px #2196f3,
+    0 0 80px #2196f3;
+    transition-delay: 1s;
 }
 
-.cube div {
+a span {
     position: absolute;
+    display: block;
+}
+
+a span:nth-child(1) {
     top: 0;
-    left: 0;
+    left: -100%;
     width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #2196f3);
 }
 
-.cube div span {
-    position: absolute;
-    top: 0;
-    left: 0;
+a:hover span:nth-child(1) {
+    left: 100%;
+    transition: 1s;
+}
+
+a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #2196f3);
+}
+
+a:hover span:nth-child(2) {
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
     width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #2196f3);
+}
+
+a:hover span:nth-child(3) {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
     height: 100%;
-    background: linear-gradient(#151515, #00ec00);
-    transform: rotateY(calc(90deg * var(--i))) translateZ(150px); /* 300 / 2 = 150 */
+    background: linear-gradient(3600deg, transparent, #2196f3);
 }
 
-.top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 300px;
-    background: #222;
-    transform: rotateX(90deg) translateZ(150px);
+a:hover span:nth-child(4) {
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
 }
 
-.top::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 300px;
-    background: #0f0;
-    transform: translateZ(-380px);
-    filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0, 255, 0, 0.2), 
-    0 0 200px rgba(0, 255, 0, 0.4),
-    0 0 300px rgba(0, 255, 0, 0.6),
-    0 0 400px rgba(0, 255, 0, 0.8),
-    0 0 500px rgba(0, 255, 0, 1);
-}
