--- a/style.css
+++ b/style.css
@@ -1,34 +1,49 @@
-body {
+* {
     margin: 0;
     padding: 0;
+    font-family: consolas;
+    box-sizing: border-box;
+}
+
+body {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     min-height: 100vh;
-    background: #031321;
-    font-family: consolas;
+    flex-direction: row;
+    background: #050801;
 }
 
 a {
     position: relative;
     display: inline-block;
-    padding: 15px 30px;
-    color: #2196f3;
+    padding: 25px 30px;
+    margin: 40px 0;
+    color: #03e9f4;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
     font-size: 24px;
     overflow: hidden;
-    transition: 0.2s;
+    transition: 0.5s;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+}
+
+a:nth-child(1) {
+    filter: hue-rotate(290deg);
+}
+
+a:nth-child(3) {
+    filter: hue-rotate(110deg);
 }
 
 a:hover {
-    color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3,
-    0 0 40px #2196f3,
-    0 0 80px #2196f3;
-    transition-delay: 1s;
+    background: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+    0 0 25px #03e9f4,
+    0 0 50px #03e9f4,
+    0 0 200px #03e9f4;
 }
 
 a span {
@@ -41,12 +56,17 @@ a span:nth-child(1) {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #2196f3);
+    background: linear-gradient(90deg, transparent, #03e9f4);
+    animation: animate1 1s linear infinite;
 }
 
-a:hover span:nth-child(1) {
-    left: 100%;
-    transition: 1s;
+@keyframes animate1 {
+    0% {
+        left: -100%;
+    }
+    50%, 100% {
+        left: 100%;
+    }
 }
 
 a span:nth-child(2) {
@@ -54,13 +74,18 @@ a span:nth-child(2) {
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #2196f3);
+    background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: animate2 1s linear infinite;
+    animation-delay: 0.25s;
 }
 
-a:hover span:nth-child(2) {
-    top: 100%;
-    transition: 1s;
-    transition-delay: 0.25s;
+@keyframes animate2 {
+    0% {
+        top: -100%;
+    }
+    50%, 100% {
+        top: 100%;
+    }
 }
 
 a span:nth-child(3) {
@@ -68,13 +93,18 @@ a span:nth-child(3) {
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #2196f3);
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: animate3 1s linear infinite;
+    animation-delay: 0.50s;
 }
 
-a:hover span:nth-child(3) {
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
+@keyframes animate3 {
+    0% {
+        right: -100%;
+    }
+    50%, 100% {
+        right: 100%;
+    }
 }
 
 a span:nth-child(4) {
@@ -82,12 +112,16 @@ a span:nth-child(4) {
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(3600deg, transparent, #2196f3);
+    background: linear-gradient(360deg, transparent, #03e9f4);
+    animation: animate4 1s linear infinite;
+    animation-delay: 0.75s;
 }
 
-a:hover span:nth-child(4) {
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: 0.75s;
+@keyframes animate4 {
+    0% {
+        bottom: -100%;
+    }
+    50%, 100% {
+        bottom: 100%;
+    }
 }
-
