--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -12,48 +15,35 @@ body {
     background: #000;
 }
 
-.loader {
+.content {
     position: relative;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background: linear-gradient(45deg, transparent, transparent 40%, #e5f403);
-    animation: animate 2s linear infinite;
+}
+
+.content h2 {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    font-size: 8em;
+}
+
+.content h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+
+.content h2:nth-child(2) {
+    color: #03a9f4;
+    animation: animate 4s ease-in-out infinite;
 }
 
 @keyframes animate {
-    0% {
-        transform: rotate(0deg);
-        filter: hue-rotate(0deg);
+    0%, 100% {
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%,
+        54% 60%, 70% 61%, 84% 59%, 100% 52%,
+        100% 100%, 0% 100%);
     }
-    100% {
-        transform: rotate(360deg);
-        filter: hue-rotate(360deg);
+    50% {
+        clip-path: polygon(0% 60%, 16% 65%, 34% 66%,
+        51% 62%, 67% 50%, 84% 45%, 100% 46%,
+        100% 100%, 0% 100%);
     }
-}
-
-.loader::before {
-    content: '';
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    right: 6px;
-    bottom: 6px;
-    background: #000;
-    border-radius: 50%;
-    z-index: 1000;
-}
-
-.loader::after {
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    background: linear-gradient(45deg, transparent, transparent 40%, #e5f403);
-    border-radius: 50%;
-    z-index: 1000;
-    z-index: 1;
-    filter: blur(30px);
 }
