--- a/style.css
+++ b/style.css
@@ -1,78 +1,163 @@
 @import url('https://fonts.googleapis.com/css?family=Bad+Script');
 
-body {
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Bad Script', cursive;
+}
+
+body {
+
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #000;
+    background: #0c27b0;
 }
 
-h1 {
-    margin: 0;
-    padding: 0;
-    color: #111;
-    font-size: 16em;
+.loader {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+    transform: perspective(500px) rotateX(60deg);
 }
 
-h1 span {
-    display: table-cell;
-    margin: 0;
-    padding: 0;
-    animation: animate 2s linear infinite;
-}
-
-h1 span:nth-child(1) {
-    animation-delay: 0s;
-}
-
-h1 span:nth-child(2) {
-    animation-delay: 0.25s;
-}
-
-h1 span:nth-child(3) {
-    animation-delay: 0.5s;
-}
-
-h1 span:nth-child(4) {
-    animation-delay: 0.75s;
-}
-
-h1 span:nth-child(5) {
-    animation-delay: 1s;
-}
-
-h1 span:nth-child(6) {
-    animation-delay: 1.25s;
-}
-
-h1 span:nth-child(7) {
-    animation-delay: 1.50s;
-}
-
-h1 span:nth-child(8) {
-    animation-delay: 1.75s;
+.loader span {
+    position: absolute;
+    display: block;
+    border: 5px solid #fff;
+    box-shadow: 0 5px 0 #ccc,
+    inset 0 5px #ccc;
+    box-sizing: border-box;
+    border-radius: 50%;
+    animation: animate 3s ease-in-out infinite;
 }
 
 @keyframes animate {
-    0%, 100% {
-        color: #fff;
-        filter: blur(2px);
-        text-shadow: 0 0 10px #00b3ff,
-        0 0 20px #00b3ff,
-        0 0 40px #00b3ff,
-        0 0 80px #00b3ff,
-        0 0 120px #00b3ff,
-        0 0 200px #00b3ff,
-        0 0 300px #00b3ff,
-        0 0 400px #00b3ff;
+    0% {
+        transform: translateZ(-100px);
     }
-    5%, 95% {
-        color: #111;
-        filter: blur(0px);
-        text-shadow: none;
+    50% {
+        transform: translateZ(100px);
     }
+}
+
+.loader span:nth-child(1) {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    animation-delay: 1.4s;
+}
+
+.loader span:nth-child(2) {
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    animation-delay: 1.3s;
+}
+
+.loader span:nth-child(3) {
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    right: 20px;
+    animation-delay: 1.2s;
+}
+
+.loader span:nth-child(4) {
+    top: 30px;
+    left: 30px;
+    bottom: 30px;
+    right: 30px;
+    animation-delay: 1.1s;
+}
+
+.loader span:nth-child(5) {
+    top: 40px;
+    left: 40px;
+    bottom: 40px;
+    right: 40px;
+    animation-delay: 1s;
+}
+
+.loader span:nth-child(6) {
+    top: 50px;
+    left: 50px;
+    bottom: 50px;
+    right: 50px;
+    animation-delay: 0.9s;
+}
+
+.loader span:nth-child(7) {
+    top: 60px;
+    left: 60px;
+    bottom: 60px;
+    right: 60px;
+    animation-delay: 0.8s;
+}
+
+.loader span:nth-child(8) {
+    top: 70px;
+    left: 70px;
+    bottom: 70px;
+    right: 70px;
+    animation-delay: 0.7s;
+}
+
+.loader span:nth-child(9) {
+    top: 80px;
+    left: 80px;
+    bottom: 80px;
+    right: 80px;
+    animation-delay: 0.6s;
+}
+
+.loader span:nth-child(10) {
+    top: 90px;
+    left: 90px;
+    bottom: 90px;
+    right: 90px;
+    animation-delay: 0.5s;
+}
+
+.loader span:nth-child(11) {
+    top: 100px;
+    left: 100px;
+    bottom: 100px;
+    right: 100px;
+    animation-delay: 0.4s;
+}
+
+.loader span:nth-child(12) {
+    top: 110px;
+    left: 110px;
+    bottom: 110px;
+    right: 110px;
+    animation-delay: 0.3s;
+}
+
+.loader span:nth-child(13) {
+    top: 120px;
+    left: 120px;
+    bottom: 120px;
+    right: 120px;
+    animation-delay: 0.2s;
+}
+
+.loader span:nth-child(14) {
+    top: 130px;
+    left: 130px;
+    bottom: 130px;
+    right: 130px;
+    animation-delay: 0.1s;
+}
+
+.loader span:nth-child(15) {
+    top: 140px;
+    left: 140px;
+    bottom: 140px;
+    right: 140px;
+    animation-delay: 0s;
 }
