--- a/style.css
+++ b/style.css
@@ -1,163 +1,97 @@
-@import url('https://fonts.googleapis.com/css?family=Bad+Script');
-
-* {
+body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
-body {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #0c27b0;
-}
-
-.loader {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    transform-style: preserve-3d;
-    transform: perspective(500px) rotateX(60deg);
-}
-
-.loader span {
+.center {
     position: absolute;
-    display: block;
-    border: 5px solid #fff;
-    box-shadow: 0 5px 0 #ccc,
-    inset 0 5px #ccc;
-    box-sizing: border-box;
-    border-radius: 50%;
-    animation: animate 3s ease-in-out infinite;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
+    perspective: 200px;
+    border: 2px solid #000;
+    width: 100px;
+    height: 40px;
+    border-radius: 40px;
 }
 
-@keyframes animate {
-    0% {
-        transform: translateZ(-100px);
-    }
-    50% {
-        transform: translateZ(100px);
-    }
+input[type="checkbox"] {
+    position: relative;
+    width: 100px;
+    height: 40px;
+    margin: 0;
+    -webkit-appearance: none;
+    outline: none;
+    transition: 0.5s;
+    cursor: pointer;
 }
 
-.loader span:nth-child(1) {
+span {
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    line-height: 40px;
+    height: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    pointer-events: none;
+    color: #fff;
+    transform-style: preserve-3d;
+}
+
+span:nth-child(2) {
+    left: 0;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    background: #0f0;
+}
+
+span:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #f00, #de0808);
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    transform-origin: right;
+    transition: 1s;
+    backface-visibility: hidden;
+}
+
+input[type="checkbox"]:checked ~ span:nth-child(2)::before {
+    transform: rotateY(180deg);
+}
+
+span:nth-child(3) {
+    right: 0;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+    background: #f00;
+}
+
+span:nth-child(3)::before {
+    content: '';
+    position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
-    animation-delay: 1.4s;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #0cd20c, #0f0);
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+    transform-origin: left;
+    transition: 1s;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
 }
 
-.loader span:nth-child(2) {
-    top: 10px;
-    left: 10px;
-    bottom: 10px;
-    right: 10px;
-    animation-delay: 1.3s;
-}
-
-.loader span:nth-child(3) {
-    top: 20px;
-    left: 20px;
-    bottom: 20px;
-    right: 20px;
-    animation-delay: 1.2s;
-}
-
-.loader span:nth-child(4) {
-    top: 30px;
-    left: 30px;
-    bottom: 30px;
-    right: 30px;
-    animation-delay: 1.1s;
-}
-
-.loader span:nth-child(5) {
-    top: 40px;
-    left: 40px;
-    bottom: 40px;
-    right: 40px;
-    animation-delay: 1s;
-}
-
-.loader span:nth-child(6) {
-    top: 50px;
-    left: 50px;
-    bottom: 50px;
-    right: 50px;
-    animation-delay: 0.9s;
-}
-
-.loader span:nth-child(7) {
-    top: 60px;
-    left: 60px;
-    bottom: 60px;
-    right: 60px;
-    animation-delay: 0.8s;
-}
-
-.loader span:nth-child(8) {
-    top: 70px;
-    left: 70px;
-    bottom: 70px;
-    right: 70px;
-    animation-delay: 0.7s;
-}
-
-.loader span:nth-child(9) {
-    top: 80px;
-    left: 80px;
-    bottom: 80px;
-    right: 80px;
-    animation-delay: 0.6s;
-}
-
-.loader span:nth-child(10) {
-    top: 90px;
-    left: 90px;
-    bottom: 90px;
-    right: 90px;
-    animation-delay: 0.5s;
-}
-
-.loader span:nth-child(11) {
-    top: 100px;
-    left: 100px;
-    bottom: 100px;
-    right: 100px;
-    animation-delay: 0.4s;
-}
-
-.loader span:nth-child(12) {
-    top: 110px;
-    left: 110px;
-    bottom: 110px;
-    right: 110px;
-    animation-delay: 0.3s;
-}
-
-.loader span:nth-child(13) {
-    top: 120px;
-    left: 120px;
-    bottom: 120px;
-    right: 120px;
-    animation-delay: 0.2s;
-}
-
-.loader span:nth-child(14) {
-    top: 130px;
-    left: 130px;
-    bottom: 130px;
-    right: 130px;
-    animation-delay: 0.1s;
-}
-
-.loader span:nth-child(15) {
-    top: 140px;
-    left: 140px;
-    bottom: 140px;
-    right: 140px;
-    animation-delay: 0s;
+input[type="checkbox"]:checked ~ span:nth-child(3)::before {
+    transform: rotateY(360deg);
 }
