--- a/style.css
+++ b/style.css
@@ -1,97 +1,43 @@
-body {
+* {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
 
-.center {
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: radial-gradient(#f2761e, #ef4921);
+}
+
+.box {
+    display: flex;
+}
+
+.box .eye {
+    position: relative;
+    width: 120px;
+    height: 120px;
+    display: block;
+    background: #fff;
+    margin: 0 20px;
+    border-radius: 50%;
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+    inset 0 0 15px #f2761e,
+    inset 0 0 25px #f2761e;
+}
+
+.box .eye::before {
+    content: '';
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 35px;
     transform: translate(-50%, -50%);
-    transform-style: preserve-3d;
-    perspective: 200px;
-    border: 2px solid #000;
-    width: 100px;
-    height: 40px;
-    border-radius: 40px;
-}
-
-input[type="checkbox"] {
-    position: relative;
-    width: 100px;
-    height: 40px;
-    margin: 0;
-    -webkit-appearance: none;
-    outline: none;
-    transition: 0.5s;
-    cursor: pointer;
-}
-
-span {
-    position: absolute;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    line-height: 40px;
-    height: 40px;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    pointer-events: none;
-    color: #fff;
-    transform-style: preserve-3d;
-}
-
-span:nth-child(2) {
-    left: 0;
-    border-top-left-radius: 40px;
-    border-bottom-left-radius: 40px;
-    background: #0f0;
-}
-
-span:nth-child(2)::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, #f00, #de0808);
-    border-top-left-radius: 40px;
-    border-bottom-left-radius: 40px;
-    transform-origin: right;
-    transition: 1s;
-    backface-visibility: hidden;
-}
-
-input[type="checkbox"]:checked ~ span:nth-child(2)::before {
-    transform: rotateY(180deg);
-}
-
-span:nth-child(3) {
-    right: 0;
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
-    background: #f00;
-}
-
-span:nth-child(3)::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, #0cd20c, #0f0);
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
-    transform-origin: left;
-    transition: 1s;
-    backface-visibility: hidden;
-    transform: rotateY(180deg);
-}
-
-input[type="checkbox"]:checked ~ span:nth-child(3)::before {
-    transform: rotateY(360deg);
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background: #000;
+    border: 10px solid #2196f3;
+    box-sizing: border-box;
 }
