--- a/style.css
+++ b/style.css
@@ -1,43 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: radial-gradient(#f2761e, #ef4921);
+    background: #111;
 }
 
-.box {
-    display: flex;
-}
-
-.box .eye {
+section {
     position: relative;
-    width: 120px;
-    height: 120px;
-    display: block;
-    background: #fff;
-    margin: 0 20px;
-    border-radius: 50%;
-    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
-    inset 0 0 15px #f2761e,
-    inset 0 0 25px #f2761e;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.box .eye::before {
-    content: '';
+section img {
     position: absolute;
-    top: 50%;
-    left: 35px;
-    transform: translate(-50%, -50%);
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background: #000;
-    border: 10px solid #2196f3;
-    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section h2 {
+    position: relative;
+    color: #fff;
+    font-size: 12em;
 }
