--- a/style.css
+++ b/style.css
@@ -1,118 +1,63 @@
-* {
+body {
     margin: 0;
     padding: 0;
-}
-
-body {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #222;
+    background: radial-gradient(#9bdfff, #009be4);
 }
 
-ul {
+.infinite {
     position: relative;
-    display: flex;
+    width: 800px;
+    height: 160px;
+    background: #525252;
+    transform-origin: bottom;
     transform-style: preserve-3d;
-    transform: rotate(-25deg) skew(25deg);
+    transform: perspective(500px) rotateX(30deg);
 }
 
-ul li {
-    position: relative;
-    list-style: none;
-    width: 60px;
-    height: 60px;
-    margin: 0 10px;
-}
-
-ul li span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    background: #333;
-    color: rgba(255, 255, 255, 0.2);
-    font-size: 30px !important;
-    transition: 0.2s;
-}
-
-ul li::before {
+.infinite::before {
     content: '';
     position: absolute;
-    bottom: -10px;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
     width: 100%;
     height: 10px;
-    background: #2a2a2a;
-    transform-origin: top;
-    transform: skewX(-41deg);
+    background: linear-gradient(90deg, #fff 0%, #fff 70%, #525252 70%, #525252 100%);
+    background-size: 120px;
+    animation: animate 0.5s linear infinite;
 }
 
-ul li::after {
+@keyframes animate {
+    0% {
+        background-position: 0px;
+    }
+
+    100% {
+        background-position: -120px;
+    }
+}
+
+.infinite::after {
     content: '';
     position: absolute;
-    top: 0;
-    left: -9px;
-    width: 9px;
-    height: 100%;
-    background: #2a2a2a;
-    transform-origin: right;
-    transform: skewY(-49deg);
+    width: 100%;
+    height: 30px;
+    background: #333;
+    bottom: -30px;
+    transform-origin: top;
+    transform: perspective(500px) rotateX(-25deg);
 }
 
-ul li:hover span {
-    z-index: 1000;
-    transition: 0.5s;
-    color: #fff;
-    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-ul li:hover span:nth-child(5) {
-    transform: translate(40px, -40px);
-    opacity: 1;
-}
-
-ul li:hover span:nth-child(4) {
-    transform: translate(30px, -30px);
-    opacity: 0.8;
-}
-
-ul li:hover span:nth-child(3) {
-    transform: translate(20px, -20px);
-    opacity: 0.6;
-}
-
-ul li:hover span:nth-child(2) {
-    transform: translate(10px, -10px);
-    opacity: 0.4;
-}
-
-ul li:hover span:nth-child(1) {
-    transform: translate(0px, 0px);
-    opacity: 0.2;
-}
-
-ul li:nth-child(1):hover span {
-    background: #3b5999;
-}
-
-ul li:nth-child(2):hover span {
-    background: #55acee;
-}
-
-ul li:nth-child(3):hover span {
-    background: #25D366;
-}
-
-ul li:nth-child(4):hover span {
-    background: #0077B5;
-}
-
-ul li:nth-child(5):hover span {
-    background: #e4405f;
+.shadow {
+    position: absolute;
+    bottom: -93px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 60px;
+    background: linear-gradient(#000, transparent);
+    opacity: 0.5;
 }
