--- a/style.css
+++ b/style.css
@@ -1,42 +1,43 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900');
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: arial;
 }
 
-.banner {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
+body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
+    background: #07252d;
 }
 
-.banner video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.banner h2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    font-size: 30vw;
-    text-align: center;
+h2 {
+    position: relative;
+    font-size: 6em;
+    letter-spacing: 15px;
+    color: #0e3742;
     text-transform: uppercase;
-    color: #000;
-    line-height: 100vh;
-    mix-blend-mode: screen;
+    width: 100%;
+    text-align: center;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+    line-height: 0.70em;
+    outline: none;
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+    0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92% {
+        color: #0e3742;
+        text-shadow: none;
+    }
+    18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 90%, 92.1%, 100% {
+        color: #fff;
+        text-shadow: 0 0 10px #e3bcf4,
+        0 0 20px #e3bcf4,
+        0 0 40px #e3bcf4,
+        0 0 80px #e3bcf4,
+        0 0 160px #e3bcf4;
+    }
 }
