--- a/style.css
+++ b/style.css
@@ -1,43 +1,39 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: arial;
-}
-
-body {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #07252d;
+    font-family: sans-serif;
+    background: url('https://st.depositphotos.com/1005721/4415/i/950/depositphotos_44158903-stock-photo-wood-plank-grain-texture-wooden.jpg');
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-h2 {
+h1 {
     position: relative;
-    font-size: 6em;
-    letter-spacing: 15px;
-    color: #0e3742;
+    margin: 0;
+    padding: 0;
+    font-size: 10em;
     text-transform: uppercase;
-    width: 100%;
     text-align: center;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-    line-height: 0.70em;
-    outline: none;
-    animation: animate 5s linear infinite;
+    background: url('https://st.depositphotos.com/1005721/4415/i/950/depositphotos_44158903-stock-photo-wood-plank-grain-texture-wooden.jpg');
+    background-attachment: fixed;
+    background-clip: unset;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-@keyframes animate {
-    0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92% {
-        color: #0e3742;
-        text-shadow: none;
-    }
-    18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 90%, 92.1%, 100% {
-        color: #fff;
-        text-shadow: 0 0 10px #e3bcf4,
-        0 0 20px #e3bcf4,
-        0 0 40px #e3bcf4,
-        0 0 80px #e3bcf4,
-        0 0 160px #e3bcf4;
-    }
+h1::before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    text-shadow: -5px 5px 20px #000,
+    -10px 10px 30px #000,
+    -20px 15px 40px #000,
+    -25px 20px 50px #000,
+    ;
 }
