--- a/style.css
+++ b/style.css
@@ -1,39 +1,107 @@
-body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    font-family: sans-serif;
-    background: url('https://st.depositphotos.com/1005721/4415/i/950/depositphotos_44158903-stock-photo-wood-plank-grain-texture-wooden.jpg');
-    background-size: cover;
-    background-attachment: fixed;
+    background: #067d8b;
 }
 
-h1 {
+.container {
     position: relative;
-    margin: 0;
-    padding: 0;
-    font-size: 10em;
-    text-transform: uppercase;
-    text-align: center;
-    background: url('https://st.depositphotos.com/1005721/4415/i/950/depositphotos_44158903-stock-photo-wood-plank-grain-texture-wooden.jpg');
-    background-attachment: fixed;
-    background-clip: unset;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    top: 50px;
 }
 
-h1::before {
-    content: attr(data-text);
+.cup {
+    position: relative;
+    width: 280px;
+    height: 300px;
+    background: linear-gradient(to right, #f9f9f9, #d9d9d9);
+    border-bottom-left-radius: 45%;
+    border-bottom-right-radius: 45%;
+}
+
+.top {
     position: absolute;
-    top: 0;
+    top: -30px;
     left: 0;
-    z-index: -1;
-    text-shadow: -5px 5px 20px #000,
-    -10px 10px 30px #000,
-    -20px 15px 40px #000,
-    -25px 20px 50px #000,
-    ;
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(to right, #f9f9f9, #d9d9d9);
+    border-radius: 50%;
+}
+
+.circle {
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: 50px;
+    background: linear-gradient(to left, #f9f9f9, #d9d9d9);
+    border-radius: 50%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.tea {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#c57e65, #e28462);
+    border-radius: 50%;
+}
+
+.handle {
+    position: absolute;
+    right: -70px;
+    top: 40px;
+    width: 160px;
+    height: 180px;
+    border: 25px solid #dcdcdc;
+    border-left: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-radius: 50%;
+    transform: rotate(42deg);
+}
+
+.plate {
+    position: absolute;
+    bottom: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 200px;
+    background: linear-gradient(to right, #f9f9f9, #e7e7e7);
+    border-radius: 50%;
+    box-shadow: 0 35px 35px rgba(0, 0, 0, 0.2);
+}
+
+.place::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50%;
+    background: linear-gradient(to left, #f9f9f9, #e7e7e7);
+}
+
+.place::after {
+    content: '';
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 50%;
+    background: linear-gradient(rgba(0,0,0,0.2) 25%, transparent, transparent );
 }
