wavy-text-animation

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+    font-family: consolas;
 }
 
 body {
@@ -12,66 +11,32 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #3d3d3d;
+    background: #000;
 }
 
-.container {
-    display: flex;
-    transform-style: preserve-3d;
-    gap: 10px;
-    transform: rotateY(30deg) rotateX(10deg);
-}
-
-.container .text {
+.wavy {
     position: relative;
-    width: 100px;
-    height: 100px;
-    transform-style: preserve-3d;
-    transition: 2.5s ease-in-out;
-    transition-delay: calc(0.25s * var(--j));
+    -webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0,0,0,0.2));
 }
 
-.container:hover .text {
-    transform: rotateX(360deg);
-
-
-}
-
-.container:hover .text:last-child {
-    transform: rotateX(630deg);
-}
-
-.container .text::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #373737;
-    transform-origin: left;
-    transform: rotateY(90deg) translateX(-50px);
-}
-
-.container .text:last-child:before {
-    background: #29ab3c;
-}
-
-.container .text span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#434343, #535353);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4em;
+.wavy span {
+    position: relative;
+    display: inline-block;
     color: #fff;
-    transform-style: preserve-3d;
-    transform: rotateX(calc(90deg * var(--i))) translateZ(50px);
+    font-size: 2em;
+    text-transform: uppercase;
+    animation: animate 1s ease-in-out infinite;
+    animation-delay: calc(0.1s * var(--i));
 }
 
-.container .text:last-child span {
-    background: linear-gradient(#29c040, #32ed4e);
-    color: #333;
+@keyframes animate {
+    0% {
+        transform: translateY(0px);
+    }
+    20% {
+        transform: translateY(-20px);
+    }
+    40%, 100% {
+        transform: translateY(0px);
+    }
 }
